优化 calc_hashnr(long) 的算法; BenchmarkSimulate的启动脚本增加gc日志